--- a/user/infrastructure/client/src/main/resources/application-client.yaml
+++ b/user/infrastructure/client/src/main/resources/application-client.yaml
@@ -6,6 +6,6 @@ oidc:
       redirect-uri: ${KAKAO_REDIRECT_URI}
   providers:
     kakao:
-      base-url: ${KAKAO_OAUTH_BASE_URL}
-      token-endpoint: ${KAKAO_OAUTH_TOKEN_ENDPOINT}
-      token-info-endpoint: ${KAKAO_OAUTH_USER_INFO_ENDPOINT}
+      base-url: https://kauth.kakao.com
+      token-endpoint: /oauth/token
+      token-info-endpoint: /oauth/tokeninfo
