--- a/user/infrastructure/client/src/main/resources/application-client.yaml
+++ b/user/infrastructure/client/src/main/resources/application-client.yaml
@@ -9,3 +9,7 @@ oidc:
       base-url: https://kauth.kakao.com
       token-endpoint: /oauth/token
       token-info-endpoint: /oauth/tokeninfo
+
+logging:
+  level:
+    com.waterfogsw.glucose.user.infrastructure.client: DEBUG
