:wrench: feign client 로그 설정

--- a/user/infrastructure/client/src/test/resources/application-client-test.yaml
+++ b/user/infrastructure/client/src/test/resources/application-client-test.yaml
@@ -9,3 +9,7 @@ oidc:
       base-url: https://localhost:443
       token-endpoint: /oauth/token
       token-info-endpoint: /oauth/tokeninfo
+
+logging:
+  level:
+    com.waterfogsw.glucose: debug
