--- a/user/application/src/main/resources/application-application.yaml
+++ b/user/application/src/main/resources/application-application.yaml
@@ -1,8 +1,8 @@
 user:
   jwt:
     access:
-      expire-seconds: 60 * 60 * 2 # 2 hours
-      secret: ${USER_JWT_ACCESS_SECRET}
+      expire-seconds: ${USER_JWT_ACCESS_EXPIRE_SECONDS:3600}
+      secret: ${USER_JWT_ACCESS_SECRET:secret}
     refresh:
-      expire-seconds: 60 * 60 * 24 * 7 # 14 days
-      secret: ${USER_JWT_REFRESH_SECRET}
+      expire-seconds: ${USER_JWT_REFRESH_EXPIRE_SECONDS:604800}
+      secret: ${USER_JWT_REFRESH_SECRET:secret}
