--- a/user/infrastructure/client/src/main/resources/application-client.yaml
+++ b/user/infrastructure/client/src/main/resources/application-client.yaml
@@ -3,7 +3,7 @@ oidc:
     kakao:
       client-id: ${KAKAO_CLIENT_ID}
       client-secret: ${KAKAO_CLIENT_SECRET}
-      redirect-uri: ${KAKAO_REDIRECT_URI}
+      redirect-uri: ${KAKAO_REDIRECT_URI:http://localhost:8080/api/auth/login/oauth2/code/KAKAO}
   providers:
     kakao:
       base-url: https://kauth.kakao.com
