--- a/user/infrastructure/persistence/src/main/resources/application-persistence.yaml
+++ b/user/infrastructure/persistence/src/main/resources/application-persistence.yaml
@@ -1,12 +1,4 @@
 spring:
-  jpa:
-    open-in-view: false
-
----
-spring:
-  config:
-    activate:
-      on-profile: local
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/user?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
@@ -14,13 +6,14 @@ spring:
     password: secret
   jpa:
     hibernate:
-      ddl-auto: validate
+      ddl-auto: create-drop
       naming:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
     show-sql: true
     properties:
       hibernate.format_sql: true
       dialect: org.hibernate.dialect.MySQL8InnoDBDialect
+    open-in-view: false
 
 ---
 spring:
