--- a/bootstrap/http/compose.yaml
+++ b/bootstrap/http/compose.yaml
@@ -1,4 +1,5 @@
 version: '3.8'
+name: glucose
 services:
   mysql:
     image: mysql:8.0.33
@@ -7,3 +8,7 @@ services:
       - "MYSQL_ROOT_PASSWORD=secret"
     ports:
       - "3307:3306"
+  redis:
+    image: redis:6.2.5
+    ports:
+      - "6380:6379"
